# cognitive-personal-assistant

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
app/: main.py
app/core/: config.py  logging.py
app/modules/language_understanding/: b1_language_detection.py
